Feat: move to laptop